# sancheck

./: .gitignore  README.md  pyproject.toml  requirements.txt
SanCheck/: LICENSE  README_SANCHECK.md  pyproject.toml
SanCheck/SanCheck/: _check_func.py  _helper.py  _info.py  _plotting.py  core.py
SanCheck/sancheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
assets/: data_example.csv
docs/: SanCheck.md
src/sancheck/: _check_func.py  _helper.py  _plotting.py  core.py
