[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sancheck"
version = "0.1.1"
description = "Minimal-tuning CLI tool for data stats and clarity checks"
readme = "README_SANCHECK.md"
requires-python = ">=3.8"

authors = [
    { name = "Nexo-kun" }
]

license = { text = "MIT" }

dependencies = []

[project.scripts]
sancheck = "SanCheck.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["SanCheck*"]